--- a/products.html
+++ b/products.html
@@ -26,12 +26,12 @@
         <h2>Nos Produits</h2>
         <div class="product">
             <h3>Pomme</h3>
-            <img src="images/pompote-pomme.jpg" alt="Pompote Pomme">
+            <img src="images/pompotepomme.jpg" alt="Pompote Pomme">
             <p>La saveur classique qui plaît à tous les enfants.</p>
         </div>
         <div class="product">
             <h3>Fraise</h3>
-            <img src="images/pompote-fraise.jpg" alt="Pompote Fraise">
+            <img src="images/pompotefraise.jpg" alt="Pompote Fraise">
             <p>Une saveur gourmande et fruitée.</p>
         </div>
         <!-- Ajoute plus de produits ici -->
