--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <section id="banner" class="banner">
-        <img src="images/pompote-banner.jpg" alt="Pompote Banner" style="max-height: 400px; object-fit: cover;">
+        <img src="images/pompotebanner.jpg" alt="Pompote Banner" style="max-height: 400px; object-fit: cover;">
     </section>
 
     <section id="about">
