--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <section id="banner" class="banner">
-        <img src="images/pompotebanner.jpg" alt="Pompote Banner" style="max-height: 400px; object-fit: cover;">
+        <img src="pompotebanner.jpg" alt="Pompote Banner" style="max-height: 400px; object-fit: cover;">
     </section>
 
     <section id="about">
@@ -38,12 +38,12 @@
         <h2>Nos Produits</h2>
         <div class="product">
             <h3>Pomme</h3>
-            <img src="images/pompote-pomme.jpg" alt="Pompote Pomme">
+            <img src="pompote-pomme.jpg" alt="Pompote Pomme">
             <p>La saveur classique qui plaît à tous les enfants.</p>
         </div>
         <div class="product">
             <h3>Fraise</h3>
-            <img src="images/pompote-fraise.jpg" alt="Pompote Fraise">
+            <img src="pompote-fraise.jpg" alt="Pompote Fraise">
             <p>Une saveur gourmande et fruitée.</p>
         </div>
     </section>
