--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <h2>Nos Produits</h2>
         <div class="product">
             <h3>Pomme</h3>
-            <img src="pompote-pomme.jpg" alt="Pompote Pomme">
+            <img src="pompotepomme.jpg" alt="Pompote Pomme">
             <p>La saveur classique qui plaît à tous les enfants.</p>
         </div>
         <div class="product">
             <h3>Fraise</h3>
-            <img src="pompote-fraise.jpg" alt="Pompote Fraise">
+            <img src="pompotefraise.jpg" alt="Pompote Fraise">
             <p>Une saveur gourmande et fruitée.</p>
         </div>
     </section>
